tests/ui/mismatched_types/closure-arg-type-mismatch-issue-45727.next.stderr
error[E0277]: expected a `FnMut(&<std::ops::RangeInclusive<{integer}> as Iterator>::Item)` closure, found `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:6:29: 6:37}`
  --> $DIR/closure-arg-type-mismatch-issue-45727.rs:6:29
   |
LL |     let _ = (-10..=10).find(|x: i32| x.signum() == 0);
   |                        ---- ^^^^^^^^^^^^^^^^^^^^^^^^ expected an `FnMut(&<std::ops::RangeInclusive<{integer}> as Iterator>::Item)` closure, found `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:6:29: 6:37}`
   |                        |
   |                        required by a bound introduced by this call
   |
   = help: the trait `for<'a> FnMut(&'a <std::ops::RangeInclusive<{integer}> as Iterator>::Item)` is not implemented for closure `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:6:29: 6:37}`
   = note: expected a closure with signature `for<'a> fn(&'a <std::ops::RangeInclusive<{integer}> as Iterator>::Item)`
              found a closure with signature `fn(i32)`
note: required by a bound in `find`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0271]: expected `RangeInclusive<{integer}>` to be an iterator that yields `&&i32`, but it yields `{integer}`
  --> $DIR/closure-arg-type-mismatch-issue-45727.rs:9:24
   |
LL |     let _ = (-10..=10).find(|x: &&&i32| x.signum() == 0);
   |                        ^^^^ expected `&&i32`, found integer

error[E0277]: expected a `FnMut(&<std::ops::RangeInclusive<{integer}> as Iterator>::Item)` closure, found `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:9:29: 9:40}`
  --> $DIR/closure-arg-type-mismatch-issue-45727.rs:9:29
   |
LL |     let _ = (-10..=10).find(|x: &&&i32| x.signum() == 0);
   |                        ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected an `FnMut(&<std::ops::RangeInclusive<{integer}> as Iterator>::Item)` closure, found `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:9:29: 9:40}`
   |                        |
   |                        required by a bound introduced by this call
   |
   = help: the trait `for<'a> FnMut(&'a <std::ops::RangeInclusive<{integer}> as Iterator>::Item)` is not implemented for closure `{closure@$DIR/closure-arg-type-mismatch-issue-45727.rs:9:29: 9:40}`
   = note: expected a closure with signature `for<'a> fn(&'a <std::ops::RangeInclusive<{integer}> as Iterator>::Item)`
              found a closure with signature `fn(&&&i32)`
note: required by a bound in `find`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
